<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SetProfileFragment">

    <Button
        android:id="@+id/setProfileButtonSet"
        android:layout_width="165dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/set_weight_button_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setProfileGenderGroup" />

    <Button
        android:id="@+id/setProfileButtonCancel"
        android:layout_width="165dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:text="@string/cancel_button_label"
        app:layout_constraintBottom_toBottomOf="@+id/setProfileButtonSet"
        app:layout_constraintEnd_toStartOf="@+id/setProfileButtonSet"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/setProfileButtonSet" />

    <TextView
        android:id="@+id/setProfileWeightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/weight_label"
        app:layout_constraintBottom_toBottomOf="@+id/setProfileWeightWidget"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/setProfileWeightWidget" />

    <EditText
        android:id="@+id/setProfileWeightWidget"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/weight_widget_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/setProfileWeightLabel"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/setProfileGenderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_group_label"
        app:layout_constraintBottom_toBottomOf="@+id/setProfileGenderGroup"
        app:layout_constraintEnd_toEndOf="@+id/setProfileWeightLabel"
        app:layout_constraintTop_toTopOf="@+id/setProfileGenderGroup" />

    <RadioGroup
        android:id="@+id/setProfileGenderGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/setProfileGenderLabel"
        app:layout_constraintTop_toBottomOf="@+id/setProfileWeightWidget">

        <RadioButton
            android:id="@+id/setProfileGenderFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gender_group_female" />

        <RadioButton
            android:id="@+id/setProfileGenderMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gender_group_male" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>