<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.ViewDrinksFragment">

    <ImageButton
        android:id="@+id/viewDrinksButtonTrash"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:contentDescription="@string/trash_button_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewDrinksButtonNext"
        app:layout_constraintStart_toEndOf="@+id/viewDrinksButtonPrevious"
        app:layout_constraintTop_toBottomOf="@+id/viewDateAdded"
        app:layout_constraintVertical_bias="0.166"
        app:srcCompat="@mipmap/ic_trash_foreground"
        tools:ignore="RedundantDescriptionCheck" />

    <Button
        android:id="@+id/viewDrinksButtonClose"
        android:layout_width="153dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:text="@string/close_button_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewDrinksButtonTrash" />

    <ImageButton
        android:id="@+id/viewDrinksButtonPrevious"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/previous_button_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewDrinksButtonTrash"
        app:srcCompat="@mipmap/ic_previous_foreground" />

    <ImageButton
        android:id="@+id/viewDrinksButtonNext"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/next_button_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewDrinksButtonTrash"
        app:srcCompat="@mipmap/ic_next_foreground" />

    <TextView
        android:id="@+id/viewDrinkSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewCurrentDrinkNumber" />

    <TextView
        android:id="@+id/viewAlcoholPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewDrinkSize" />

    <TextView
        android:id="@+id/viewCurrentDrinkNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewDateAdded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewAlcoholPercent" />

</androidx.constraintlayout.widget.ConstraintLayout>